--- a/core/logging.yaml
+++ b/core/logging.yaml
@@ -42,6 +42,6 @@ loggers:
         propagate: no
 
 root:
-    level: INFO
+    level: DEBUG
     handlers: [debug_console_handler,info_console_handler, warning_file_handler, error_file_handler]
 ...
