--- a/core/application.yaml
+++ b/core/application.yaml
@@ -1,3 +1,11 @@
 mongodb:
   host: localhost
   port: 27017
+account:
+  name: 15577262746
+  password: 6uQs3z328rZFjdy4
+method_with_url:
+  get:
+    - http://www.jiayuan.com
+  post:
+    - http://search.jiayuan.com/v2/search_v2.php
